2 lab fix, need test for download

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ server.port=8080
 #spring.mvc.static-path-pattern=/static/**
 #spring.resources.static-locations=classpath:/static/
 
-data.file.filename=D:\\Telegram Desktop\\photoshop-server-ns\\photoshop-server\\src\\main\\resources\\first.pnm
+data.file.filename=D:\\projectsJava\\photoshop\\photoshop-lab-3\\photoshop-server\\src\\main\\resources\\first.ppm
+
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
